>deprecated and call the new `setDefaultMessage()` method.

When symfony displays an error, the error message to use is determined as
follows:

  * Symfony looks for a message passed when the validator was created (via the
    second argument of the validator constructor);

  * If it is not defined, it looks for a default message defined with
    the `setDefaultMessage()` method;

  * If it is not defined, it falls back to the default message defined by the
    validator itself (when the message has been added with the `addMessage()`
    method).

Autoloaders
-----------

### `sfAutoloadAgain` (EXPERIMENTAL)

A special autoloader has been added that is just for use in debug mode. The
new `sfAutoloadAgain` class will reload the standard symfony autoloader and
search the filesystem for the class in question. The net effect is that you no
longer have to run `symfony cc` after adding a new class to a project.

Tests
-----

### Functional Tests

When a request generates an exception, the `debug()` method of the response
tester now outputs a readable text representation of the exception, instead of
the normal HTML output. It makes debugging much more easier.

Tasks
-----

### `sfTask::askAndValidate()`

There is a new `sfTask::askAndValidate()` method to ask a question to the user
and validates its input:

    [php]
    $anwser = $this->askAndValidate('What is you email?', new sfValidatorEmail());

The method also accepts an array of options (see the API doc for more
information).

Exceptions
----------

### Autoloading

When an exception is thrown during autoloading, symfony now catch them and
outputs an error to the user. That should solve most "White screen of death"
pages.

Propel
------

### `propel:insert-sql`

Before `propel:insert-sql` removes all data from a database, it asks for a
confirmation. As this task can remove data from several databases, it now also
displays the name of the connections of the related databases.